--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
-<body> 
+<body id="body">
  <header>
   <nav class="background-static">
     <div class="nav-main">
