--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <p>Chel Shar</p>
       </div>
       <ul id="nav-ul"class="nav-ul">
-        <li><a id="active" href="#">Главная</a></li>
+        <li><a id="active" href="index.html">Главная</a></li>
         <li><a href="#">О нас</a></li>
-        <li><a href="#">Шары</a></li>
+        <li><a href="index2.html">Шары</a></li>
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Контакты</a></li>
       </ul>
