--- a/index2.html
+++ b/index2.html
@@ -15,9 +15,9 @@
         <p>Chel Shar</p>
       </div>
       <ul id="nav-ul"class="nav-ul">
-        <li><a href="#">Главная</a></li>
+        <li><a href="index.html">Главная</a></li>
         <li><a href="#">О нас</a></li>
-        <li><a id="active" href="#">Шары</a></li>
+        <li><a id="active" href="index1.html">Шары</a></li>
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Контакты</a></li>
       </ul>
@@ -33,96 +33,96 @@
    <section class="products">
     <div class="products-way">шары / <span class="span-way">наборы</span></div>
     <div class="products-block">
-      <div class="products-item">
+      <a  href="index3.html" class="products-item">
         <img src="img/product1.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product2.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product3.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product4.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product1.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product2.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product3.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product4.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product1.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product2.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product3.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product4.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product1.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product2.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product3.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product4.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product4.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
-      <div class="products-item">
+      </a>
+      <a  href="index3.html" class="products-item">
         <img src="img/product4.png" alt="">
         <div class="products-item-name">Crome assorti</div>
         <div class="products-item-price">1 250 руб.</div>
-      </div>
+      </a>
     </div>
    </section>
   </main>
